Style and Fix: Style Hero for Desktop, Tablet, re-use styles via global style sheet, with adjustments in respective style sheet. Fix horizontal overflow on Shows page

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -189,16 +189,6 @@ textarea {
       padding-right: 1.6rem;
       position: relative;
 
-      @include tablet {
-          height: 40rem;
-      }
-
-      @include desktop {
-          padding-left: 3.6rem;
-          padding-right: 3.6rem;
-          height: 60rem;
-      }
-
       &__overlay {
           background-color: rgba(50, 50, 50, 0.50);
           position: absolute;
@@ -207,15 +197,6 @@ textarea {
           display: flex;
           padding-left: 1.6rem;
 
-          @include tablet {
-              height: 40rem;
-          }
-  
-          @include desktop {
-              padding-left: 3.6rem;
-              padding-right: 3.6rem;
-              height: 60rem;
-          }
         }
     
       }
