--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -10,6 +10,17 @@
     width: 100%;
     height: 40rem;
 
+    @include tablet {
+        height: 60rem;
+
+    }
+
+
+    @include desktop {
+        height: 60rem;
+
+    }
+
 
     .overlay {
         display: flex;
@@ -18,35 +29,63 @@
         gap:1rem;
         width: 100%;
         height: 40rem;
-    }
 
-    &__title {
-        @include font-type ($demi ,4.4rem, 3.6rem,$White);
 
         @include tablet {
-            @include font-type($bold, 6.8rem, 6rem,$White);
+            height: 60rem;
         }
 
         @include desktop {
-            @include font-type($bold, 6.8rem, 6rem,$White);
+            padding-left: 3.6rem;
+            padding-right: 3.6rem;
+            height: 60rem;
         }
+       
     }
+
 
     &__subtitle {
 
         @include font-type ($regular,3.2rem, 1.6rem,$White);
 
         @include tablet {
-            @include font-type($bold, 6.8rem, 6rem,$White);
+            @include font-type($regular, 4.4rem, 2.4rem,$White);
         }
 
         @include desktop {
-            @include font-type($bold, 6.8rem, 6rem,$White);
+            @include font-type($bold, 4.4rem, 2.4rem,$White);
+        }
+    } 
+
+    &__title {
+        @include font-type ($demi ,4.4rem, 3.6rem,$White);
+
+        @include tablet {
+            @include font-type($demi, 6rem, 6.8rem,$White);
         }
 
+        @include desktop {
+            @include font-type($demi, 6rem, 6.8rem,$White);
+        }
     }
 
     & iframe {
         margin-top: 1rem;
+
+        @include tablet {
+            margin-top: 6rem;
+
+        }
+
+        @include desktop {
+            margin-top: 8rem;
+
+        }
     }
-}
+
+}   
+
+
+
+
+  
